# pyaconsys

./: CONTRIBUTING.md  README.md  example.env  pyproject.toml
src/aconsys/base/: window.py
src/aconsys/views/login/: controls.py  window.py
src/aconsys/views/main/: controls.py  window.py
tests/: conftest.py
