[project]
name = "pyaconsys"
version = "0.2.0"
description = "A Python wrapper for the Aconsys desktop application."
authors = [
    {name = "CesarZHX", email = "112836949+CesarZHX@users.noreply.github.com"},
    {name = "fabianRc10", email = "173803579+fabianRc10@users.noreply.github.com"},
]
contributors = [
    {name = "soulLeo77", email = "176849955+soulLeo77@users.noreply.github.com"},
]
dependencies = ["uiautomation>=2.0.29", "pydantic>=2.12.4"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "pytest>=8.4.2",
]
